tests/programs/fail/hallo_world.vi

use std::io::{print_ln, println::{println, println}};

pub fn main(std::io) {
  io.println(hallo, world)
}
